--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "file-saver": "^2.0.5",
     "next": "^14.1.0",
     "next.js": "^1.0.3",
     "postcss": "8.4.32",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.21.3",
