--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
 	"routes": [
 		{
-			"src": "/api/(.*)",
-			"dest": "http://216.153.62.1:8081/api/$1"
+			"src": "(.*)/api/(.*)",
+			"dest": "http://$1/api/$2"
 		}
 	]
 }
