--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.0.3",
     "next": "^14.1.0",
     "next.js": "^1.0.3",
     "postcss": "8.4.32",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.21.3",
+    "react-spring": "8.0.27",
     "react-use": "^17.5.0",
     "react-webcam": "^7.2.0",
     "tailwindcss": "3.4.0"
