--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.21.3",
+    "react-slick": "^0.30.1",
     "react-spring": "8.0.27",
     "react-use": "^17.5.0",
     "react-webcam": "^7.2.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.4.0"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
